--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ body {
     flex: 1;
     flex-direction: column;
     font-family: Inter, sans-serif;
+    color: #231f20;
     background-color: #f8f8f8;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 .content {
@@ -30,7 +35,7 @@ body {
 .footer {
     width: 100%;
     height: 60px;
-    background-color: #1e90ff;
+    background-color: #231f20;
     color: white;
     display: flex;
     flex-shrink: 0;
@@ -75,7 +80,7 @@ p {
 }
 
 button {
-    background-color: #1e90ff;
+    background-color: #231f20;
     color: white;
     border: none;
     border-radius: 5px;
@@ -84,7 +89,7 @@ button {
 }
 
 button:hover {
-    background-color: #0077cc;
+    background-color: #555253;
 }
 
 .content-middle {
@@ -92,31 +97,29 @@ button:hover {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 100px;
+    padding-top: 70px;
+    padding-bottom: 120px;
 }
 
 h1 {
     text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .slideshow {
     position: relative;
     width: 100%;
-    height: 300px; 
+    height: auto; 
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
-.slide-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.slideshow img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
 .slide {
@@ -128,4 +131,25 @@ h1 {
 
 .slide.active {
     display: block;
+}
+
+
+@media (max-width: 768px) {
+    .content {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .content-left, .content-right, .content-middle {
+        width: 100%;
+    }
+
+    .content-left, .content-right {
+        padding-bottom: 20px;
+    }
+
+    .content-middle {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
 }
