--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -10,7 +10,7 @@ body {
     justify-content: space-between;
     font-family: Inter, sans-serif;
     color: #231f20;
-    background-color: #e8f4ff;
+    background-color: #E7E4E5;
 }
 
 * {
@@ -44,7 +44,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-color: #dbeeff;
+    background-color: #DBD6D8;
     border-radius: 5px;
     box-shadow: 0 0 5px #231f20;
 }
@@ -64,12 +64,12 @@ body {
     border-radius: 5px;
     border: 1px solid #231f20;
     width: 100%;
-    background-color: #ffffffbe;
+    background-color: #E7E4E5;
 }
 
 .login form button {
     background-color: #231f20;
-    color: white;
+    color: #E7E4E5;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -86,7 +86,7 @@ body {
     width: 100%;
     height: 60px;
     background-color: #231f20;
-    color: white;
+    color: #E7E4E5;
     display: flex;
     flex-shrink: 0;
     justify-content: center;
