--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ button:hover {
     background-color: #555253;
 }
 
+a {
+    color: #231f20;
+    text-decoration: none;
+}
+
+h1, p {
+    text-align: center;
+}
+
 
 /* Header */
 .header-container {
@@ -38,7 +47,6 @@ button:hover {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    /* max-height: 80px; */
     background-color: #E7E4E5;
 }
 
@@ -46,7 +54,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;  
-    padding-left: 200px;
+    padding-left: 150px;
 }
 
 .logo img {
@@ -72,7 +80,6 @@ button:hover {
     flex-direction: column;
     flex: 1;
     align-items: center;
-    max-height: 450px;
     padding: 50px;
     background-color: #f0f0f0;
     text-align: center;
@@ -90,7 +97,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.6); 
     backdrop-filter: blur(2px); 
     z-index: 1;
 }
@@ -106,6 +113,7 @@ button:hover {
 
 .achievement-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     width: 80%;
     padding: 50px;
@@ -113,11 +121,12 @@ button:hover {
 
 .achievement {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding: 10px;
-    width: 200px;
+    max-width: 200px;
 }
 
 .achievement-title {
@@ -134,20 +143,15 @@ button:hover {
     height: auto;
 }
 
-
-
-
-
-
 /* Moto boxes */
 .content {
     display: flex;
     flex: 1;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 50px 200px;
     background-color: #E7E4E5;
-
 }
 
 .moto-container {
@@ -155,6 +159,7 @@ button:hover {
     flex-wrap: wrap;
     gap: 40px;
     justify-content: center;
+    padding-bottom: 50px;
 }
 
 .moto-card {
@@ -165,6 +170,12 @@ button:hover {
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #DBD6D8;
+}
+
+.moto-card:hover {
+    transform: scale(1.05);
+    transition: transform 0.5s;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .moto-card img {
@@ -180,14 +191,6 @@ button:hover {
     font-size: 1.2em;
     color: #231f20;
 }
-
-.moto-card a {
-    text-decoration: none;
-    color: #231f20;
-}
-
-
-
 
 /* Testimonials section */
 .testimonials-container {
@@ -260,4 +263,39 @@ button.prev:hover, button.next:hover {
     flex-shrink: 0;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 768px) {
+    /* Header */
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo {
+        padding: 10px 0;
+    }
+
+    .header-button {
+        padding: 10px 0;
+    }
+
+    /* Content */
+    .content {
+        padding: 50px 20px;
+    }
+
+    .moto-card {
+        min-width: 150px;
+    }
+
+    .testimonial {
+        min-width: 50%;
+    }
+}
+
+@media (max-width: 480px) {
+    .testimonial {
+        min-width: 100%;
+    }
 }
