--- a/public/css/all-motorcycles-style.css
+++ b/public/css/all-motorcycles-style.css
@@ -148,6 +148,7 @@ select {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #DBD6D8;
     min-width: 150px;
+    padding: 10px;
 }
 
 .moto-card:hover {
@@ -258,6 +259,7 @@ input::-webkit-inner-spin-button {
     top: -5px;
     pointer-events: none;
     cursor: pointer;
+    appearance: none;
     -webkit-appearance: none;
 }
 
