--- a/public/css/all-motorcycles-style.css
+++ b/public/css/all-motorcycles-style.css
@@ -114,6 +114,11 @@ select {
     gap: 10px;
 }
 
+.submit-button {
+    display: flex;
+    padding: 50px 0;
+}
+
 .moto-content-container {
     display: flex;
     flex-direction: column;
