--- a/public/css/all-motorcycles-style.css
+++ b/public/css/all-motorcycles-style.css
@@ -277,3 +277,61 @@ input[type="range"]::-webkit-slider-thumb {
     pointer-events: auto;
     -webkit-appearance: none;
 }
+
+
+@media (max-width: 768px) {
+    /* Header */
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo {
+        padding: 10px 0;
+    }
+
+    .header-button {
+        padding: 10px 0;
+    }
+
+    /* Content */
+    .content {
+        padding: 50px 10px;
+        padding-top: 0;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .moto-container-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+        padding-top: 0;
+    }
+
+    .moto-container {
+        gap: 15px;
+    }
+
+
+    .content-header {
+        padding-left: 0;
+    }
+
+    .content-header h1 {
+        text-align: center;
+    }
+
+    .filters-section {
+        padding: 20px;
+    }
+
+    .submit-button {
+        padding: 20px 0;
+        padding-bottom: 0;
+    }
+
+}
