Add motorcycle details page, add motorcycle details section, location and reviews, add styling

--- a/public/css/all-motorcycles-style.css
+++ b/public/css/all-motorcycles-style.css
@@ -83,6 +83,7 @@ select {
 
 /* Content */
 .content-container {
+    background-color: #f0f0f0;
     display: flex;
     flex: 1;
     flex-direction: column;
