--- a/public/css/motorcycle-details.css
+++ b/public/css/motorcycle-details.css
@@ -355,3 +355,97 @@ h3 {
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 960px) {
+    .content {
+        padding-left: 10px;
+    }
+
+    .rent-container {
+        margin-top: 50px;
+    }
+    
+    .rent-form {
+        gap: 10px;
+        padding: 20px;
+    }
+    
+    .date,
+    .time {
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+    
+    .start-date,
+    .end-date,
+    .start-time,
+    .end-time {
+        gap: 5px;
+    }
+
+    .rent-form label {
+        font-size: 1em;
+    }
+    
+    .rent-form input {
+        font-size: 0.9em;
+    }
+    
+    .rent-form button {
+        font-size: 0.7em;
+    }
+    
+    .rent-container .main-text {
+        font-size: 1.2em;
+    }
+    
+    .rent-container .sub-text {
+        margin: 0;
+        font-size: 0.7em;
+    }
+}
+
+@media (max-width: 768px) {
+    /* Header */
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo {
+        padding: 10px 0;
+    }
+
+    .header-button {
+        padding: 10px 0;
+    }
+
+    /* Content */
+    .content-container {
+        flex-wrap: wrap-reverse;
+    }
+
+    .content {
+        padding: 50px 10px;
+    }
+
+    .rent-container {
+        position: static;
+    }
+
+    .moto-container h1{
+        padding-left: 5px;
+    }
+
+    .moto-info {
+        padding-left: 5px;
+    }
+
+    .insurance-container,
+    .location-container,
+    .review-container,
+    .rent-container {
+        padding-left: 10px;
+    }
+
+}
