--- a/style.css
+++ b/style.css
@@ -88,7 +88,9 @@ h1, p {
 .achievement-container {
     position: relative;
     display: flex;
+    flex: 1;
     align-items: center;
+    justify-content: center;
     height: 50vh;
     background-color: #DBD6D8;
     overflow: hidden;
@@ -98,13 +100,14 @@ h1, p {
 
 .achievement-slide {
     position: absolute;
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     transition: opacity 1s ease-in-out, transform 1s ease-in-out;
     opacity: 0;
-    transform: translateX(100%);
+    transform: translateX(150%);
 }
 
 .achievement-slide.active {
@@ -118,7 +121,8 @@ h1, p {
 }
 
 .achievement-slide img {
-    width: 1300px;
+    width: 100%;
+    max-width: 130vw;
     height: auto;
     object-fit: cover;
 }
@@ -130,7 +134,7 @@ h1, p {
     justify-content: center;
     align-items: center;
     padding: 100px;
-    padding-right: 150px;
+    padding-left: 150px;
     gap: 50px;
 }
 
@@ -141,7 +145,7 @@ h1, p {
     align-items: center;
     text-align: center;
     padding: 10px;
-    max-width: 200px;
+    max-width: 250px;
 }
 
 .achievement-title {
@@ -151,11 +155,15 @@ h1, p {
     gap: 10px;
     padding-bottom: 10px;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 1.5vw;
+}
+
+.achievement-description {
+    font-size: 1vw;
 }
 
 .achievement img {
-    max-width: 30px;
+    max-width: 2.5vw;
     height: auto;
 }
 
@@ -308,6 +316,38 @@ button.prev:hover, button.next:hover {
     align-items: center;
 }
 
+@media (max-width: 1350px) {
+    .achievement-slide {
+        flex-direction: column;
+    }
+
+    .achievement-container {
+        padding: 10px;
+        height: 70vh;
+    }
+
+    .achievement-section {
+        flex-direction: row;
+        padding: 20px;
+    }
+
+    .achievement-slide img {
+        max-width: 60vw;
+    }
+
+    .achievement img {
+        max-width: 4vw;
+    }
+
+    .achievement-title {
+        font-size: 3vw;
+    }
+
+    .achievement-description {
+        font-size: 1.5vw;
+    }
+} 
+
 @media (max-width: 768px) {
     /* Header */
     .header-container {
@@ -324,6 +364,42 @@ button.prev:hover, button.next:hover {
     }
 
     /* Content */
+    .heroText {
+        padding: 50px 20px;
+        font-size: 0.8em;
+    }
+
+    .achievement-slide {
+        flex-direction: column;
+    }
+
+    .achievement-container {
+        padding: 10px;
+        height: 35vh;
+    }
+
+    .achievement-section {
+        flex-direction: row;
+        gap: 0;
+        padding: 5px;
+    }
+
+    .achievement-slide img {
+        max-width: 70vw;
+    }
+
+    .achievement img {
+        max-width: 6vw;
+    }
+
+    .achievement-title {
+        font-size: 5vw;
+    }
+
+    .achievement-description {
+        font-size: 3vw;
+    }
+
     .content {
         padding: 50px 10px;
     }
