--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -82,6 +82,12 @@ body {
     background-color: #555253;
 }
 
+.error {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
 .footer {
     width: 100%;
     height: 60px;
