--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -101,12 +101,15 @@ body {
 }
 
 .input-group {
+    display: flex;
+    flex-direction: column;
     position: relative;
     width: 100%;
     margin-bottom: 15px;
 }
 
 .validation-message {
+    align-self: center;
     text-align: center;
     max-width: 200px;
     color: #721c24;
