--- a/public/css/checkout-style.css
+++ b/public/css/checkout-style.css
@@ -85,6 +85,17 @@
     justify-content: space-between;
 }
 
+/* Validation */
+.validation-message {
+    align-self: center;
+    text-align: center;
+    max-width: 200px;
+    color: #721c24;
+    font-size: 0.8em;
+    margin-top: 10px;
+    display: none;
+}
+
 @media (max-width: 965px) {
     .container {
         gap: 20px;
