--- a/public/css/admin-style.css
+++ b/public/css/admin-style.css
@@ -173,6 +173,26 @@ tr:hover td {
     color: #E7E4E5;
 }
 
+/*  Alert Messages */
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+.alert.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+
 @media (max-width: 1100px ) {
     .admin-container {
         flex-direction: column;
